--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
-<html>
-<head>
-<title> Application </title>
-</head>
-<body>
-this is my application
-Login Form
-</body>
-</html>
+<! DOCTYPE HTML>
+<HTML>
+<HEAD>
+<TITLE> States in India </title>
+<meta charset="UTF-8" >
+</HEAD>
+<BODY>
+<OL>
+<LI> MAHARASHTRA </LI>
+<LI> GUJRAT </LI>
+<LI> RAJASTHAN </LI>
+</OL>
+<UL>
+<LI> KARNATAKA </LI>
+<LI> UTTAR PRADESH </LI>
+<LI> BIHAR </LI>
+</UL>
+Temperature  Varies from 29 &#186 to 35 &#186.
+Temperature in Rajashthan is &#62 than kashmir
+india population is &#60 than china
